force-app/main/default/objects/Sharing_Settings__c/Sharing_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Sharing Settings</label>
</CustomObject>