force-app/main/default/objects/Sharing_Settings__c/fields/Access_Level__c.field-meta.xml
<CustomField>
    <fullName>Access_Level__c</fullName>
    <label>Access Level</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>