force-app/main/default/objects/Sharing_Settings__c/fields/Key_Value__c.field-meta.xml
<CustomField>
    <fullName>Key_Value__c</fullName>
    <description>Value of field on Sobject (Sobject Type) that is unique and indentyfy sharing</description>
    <inlineHelpText>Value of field on Sobject (Sobject Type) that is unique and indentyfy sharing</inlineHelpText>
    <label>Key Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>