force-app/main/default/objects/Sharing_Settings__c/fields/Shared_Sobject_Type__c.field-meta.xml
<CustomField>
    <fullName>Shared_Sobject_Type__c</fullName>
    <label>Shared Sobject Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>