force-app/main/default/objects/Sharing_Settings__c/fields/Sharing_Sobject_Type__c.field-meta.xml
<CustomField>
    <fullName>Sharing_Sobject_Type__c</fullName>
    <label>Sharing Sobject Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>