force-app/main/default/objects/Sharing_Settings__c/fields/Sobject_Type__c.field-meta.xml
<CustomField>
    <fullName>Sobject_Type__c</fullName>
    <description>Name of related Sobject Type</description>
    <inlineHelpText>Name of related Sobject Type</inlineHelpText>
    <label>Sobject Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>